[gd_scene load_steps=13 format=3 uid="uid://m1tvkweleqxg"]

[ext_resource type="Texture2D" uid="uid://begjq8wprxral" path="res://sprites/light_point.png" id="1_mmppd"]
[ext_resource type="Script" path="res://scenes/goal.gd" id="1_n8t8m"]
[ext_resource type="Texture2D" uid="uid://due3l0y1sm63v" path="res://sprites/Letter.png" id="2_4eihx"]
[ext_resource type="AudioStream" uid="uid://cagsaau8gmcg4" path="res://sounds/goal.mp3" id="4_o2ixq"]

[sub_resource type="Animation" id="Animation_ycfc4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_m668w"]
resource_name = "rotate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_87pq6"]
_data = {
"RESET": SubResource("Animation_ycfc4"),
"rotate": SubResource("Animation_m668w")
}

[sub_resource type="Animation" id="Animation_l1mrm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_250qv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_cdoj2"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 0.233333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bpa15"]
_data = {
"RESET": SubResource("Animation_l1mrm"),
"fade_in": SubResource("Animation_250qv"),
"fade_out": SubResource("Animation_cdoj2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_duhhc"]
size = Vector2(20, 38)

[node name="Goal" type="Node2D"]
script = ExtResource("1_n8t8m")

[node name="End" type="Sprite2D" parent="."]
modulate = Color(0.278431, 0, 0.592157, 1)
z_index = 2
texture = ExtResource("1_mmppd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="End"]
libraries = {
"": SubResource("AnimationLibrary_87pq6")
}
autoplay = "rotate"

[node name="Black" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 200
scale = Vector2(50, 50)
texture = ExtResource("2_4eihx")

[node name="BlackAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../Black")
libraries = {
"": SubResource("AnimationLibrary_bpa15")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 3
shape = SubResource("RectangleShape2D_duhhc")

[node name="Wait" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_o2ixq")
volume_db = -14.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Wait" to="." method="_on_wait_timeout"]
